--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
+# Dependencies
 node_modules/
-.node_modules/
-built/*
-/lib/
+
+# Build Output
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment Variables
+.env
+.env.test
+.env.production
+
+# IDEs and Editors
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Others
+.DS_Store
